samples/_failures_safe/1761282834_8c3f57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a0f7c5b.c: In function ‘dfs’:
./samples/SAFE/__tmp_5a0f7c5b.c:163:22: error: expected ‘;’ at end of input
  163 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_5a0f7c5b.c:163:5: error: expected declaration or statement at end of input
  163 |     for (int i = 0; i
      |     ^~~
